--- a/style.css
+++ b/style.css
@@ -17,3 +17,55 @@
 #player, #layer1, #layer2, #layer3, #layer4, #layer5, #enemy_fly, #enemy_plant, #enemy_spider_big, #fire, #collisionAnimation, #lives {
     display: none;
 }
+body {
+    min-height: 100vh;
+    background: linear-gradient(180deg, #3c1414, #151414);
+    color: white;
+    padding: 12px;
+    font-family: 'Fredoka One', cursive;
+}
+.judul {
+    text-align: center;
+    color: white;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 50px;
+    background-size: cover;
+    padding: 20px;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.game-nav {
+    text-align: center;
+}
+
+.game-click {
+    list-style: none; 
+}
+
+.game-click li {
+    margin-bottom: 20px;
+}
+
+.game-click li a {
+    color: white;
+    font-size: 20px;
+    background-color: #652f2f;
+    padding: 15px 30px; /* Tetapkan padding yang sama */
+    border-radius: 25px;
+    text-decoration: none;
+    display: inline-block;
+    width: 280px; /* Tambahkan lebar yang sama untuk semua tombol */
+    transition: background-color 0.3s ease;
+}
+
+
+.game-click li a:hover {
+    background-color: #3c1212; /* Ubah warna latar belakang saat dihover */
+}
