--- a/style.css
+++ b/style.css
@@ -69,3 +69,7 @@ body {
 .game-click li a:hover {
     background-color: #3c1212; /* Ubah warna latar belakang saat dihover */
 }
+#layar1 {
+    color: aqua;
+    background-color: #652f2f;
+}
